--- a/localisation/TD_01_Flavour_Hengtua_l_english.yml
+++ b/localisation/TD_01_Flavour_Hengtua_l_english.yml
@@ -230,7 +230,7 @@
  lameng_ideas_bonus: "Lamengian Ambition"
  lameng_ideas_start: "Lamengian Traditions"
  lameng_memories_of_lamhoi: "Memories of Lamhoi"
- lameng_memories_of_lamhoi_desc: "The island across the sea - Lamhoi - is still what many call their ancestral home. The rise of the tyrannical rule 8 centuries ago and subsequent persecution of scholars and scribes led to many of us to flee to the young northern colonies."
+ lameng_memories_of_lamhoi_desc: "The island across the sea - Lamhoi - is still what many call their ancestral home. The rise of the tyrannical rule eight centuries ago and subsequent persecution of scholars and scribes led to many of us to flee to the young northern colonies."
  lameng_great_alliance: "Great Alliance"
  lameng_great_alliance_desc: "At first, most of the cities coexisted independently, rarely leaving the comforts of the walled towns. The first real incentive to unite was continuously growing power of the southern tyrants and even kingdom of Heisean in the east. This led to establishment of the first alliance, followed by second and later conquests of remaining cities."
  lameng_local_garrisons: "Local Garrisons"
@@ -366,3 +366,21 @@
  shou_ganji_system_desc: "Another policy inherited from the Yesünian times is the Ganji system, influenced by how the Bunelisuli managed to keep their subjects in check. By sending strategic gifts, we can trick our subjects into thinking that our rule isn't that tyrannical after all."
  shou_hengtuan_hegemony: "Hengtuan Hegemony"
  shou_hengtuan_hegemony_desc: "Only 4 different states have managed to be sole rulers in the Zimahei, but 3 of those have claimed the mantle of the Heng dynasty. Clinging to that identity prevented any Henlen state to bring unity once again, always bickering about the most rightful successor. We brought not only stability, but also a fresh perspective of power in the region, showing them that you have to build something new instead of longing for the ancient times of prosperity."
+
+ haugche_group_ideas: "Huangche Minor Ideas"
+ haugche_group_ideas_bonus: "Huangche Minor Ambition"
+ haugche_group_ideas_start: "Huangche Minor Traditions"
+ huangche_kwaang_legacy: "Kwaangian Legacy"
+ huangche_kwaang_legacy_desc: "The late Kwaang kingdom has now been destroyed for more than a few centuries. Despite its dysfunctional monarchy and administrative anarchy, its cultural legacy still lives within many of the Huangche people. Various state created festivals still happen in the countryside and words of the great poets are still printed in large quantities."
+ huangche_taamtau_way: "Way of Taamtau"
+ huangche_taamtau_way_desc: "School of Taamtau was a response to free-hand approach of the Kwaang dynasty. Independent lords often ran their provinces as if they had no overlord. When Lam Bao ascended to power, he sought to establish a strong state, one with a proper administrative hierarchy, conducting regular censuses and making sure that everything runs smoothly in the countryside."
+ huangche_settlers_of_the_interior: "Settlers of the Interior"
+ huangche_settlers_of_the_interior_desc: "Highlands of Moongma were for the most part unoccupied bar some hermit monks. With the discovery of various valuable metals such as copper, large-scale colonization was conducted in order to give our military and economy an upper hand. Abundance of wood and limestone also helped to quickly construct expansive settlements leading to a population boom."
+ huangche_moongman_architecture: "Moongman Architecture"
+ huangche_moongman_architecture_desc: "Another cultural pillar inherited from the Kwaang kingdom, the Moongman architecture is characterized by richly decorated rooftops and cornices, large courtyards and their characteristic grayish-red appearance. Many travellers often admit to feeling of power emanating from them, helping us strengthening our grasp on the rural dissidents."
+ huangche_masters_of_paau: "Masters of Paau"
+ huangche_masters_of_paau_desc: "The Paau Sea is often a place where the Huangche, Daimin and Heisen compete for power. In order to support the interests of our seamen and protect them against various Shaantin and Tsui pirates, a state sanctioned trade fleet has to be established, allowing us to not only domianted the seas, but also direct the investments of our merchants."
+ huangche_huangche_copper: "Huangche Copper"
+ huangche_huangche_copper_desc: "Copper found in Lamhoi and Moongman highlands has proved to be a great asset in expanding the army. Thanks to the efforts of the brightest engineers of Hengtua, our guns are not only the most destructive, but their relative cheapness allows us to field countless guns on the battlefield."
+ huangche_unite_the_tsinhoi: "Unite the Tsinhoi"
+ huangche_unite_the_tsinhoi_desc: "Tsinhoi has been ruled by corrupted warlords, causing widespread chaos and disarray, being interested only in their own personal gains. We have to show them than the true prosperity comes not from liberty, but from order. If they don't want to embrace the true way, we will have to show it to them ourselves."
