--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -2981,7 +2981,7 @@
  PROV2980: "2980"
  PROV2981: "Nutagak"
  PROV2982: "Apuntuuk"
- PROV2983: "2983"
+ PROV2983: "Sarakhani Coast"
  PROV2984: "Kitchak"
  PROV2985: "Nanukin"
  PROV2986: "Piayaak"
@@ -3132,16 +3132,16 @@
  PROV3131: "Shonkhortag"
  PROV3132: "Burkhamtal"
  PROV3133: "Gengshan"
- PROV3134: "3134"
+ PROV3134: "Bürdan"
  PROV3135: "Dansan"
- PROV3136: "3136"
+ PROV3136: "Ziyun"
  PROV3137: "Alisunyan"
  PROV3138: "Anggiyum"
  PROV3139: "Kodunkhar"
  PROV3140: "3140"
  PROV3141: "Gözdyr"
  PROV3142: "Yabantok"
- PROV3143: "3143"
+ PROV3143: "Ziyun"
  PROV3144: "Chitan Coast"
  PROV3145: "Gerkan"
  PROV3146: "3146"
@@ -3186,7 +3186,7 @@
  PROV3185: "Ulaan Talbai"
  PROV3186: "Tövdov"
  PROV3187: "3187"
- PROV3188: "3188"
+ PROV3188: "Abalok Strait"
  PROV3189: "Qaramkhnur"
  PROV3190: "Ötgkhön"
  PROV3191: "Khuuraigod"
