new visparaya setup

--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -2097,7 +2097,7 @@
  PROV2096: "Kwaenan Coast"
  PROV2097: "Gurlamak"
  PROV2098: "Budar"
- PROV2099: "2099"
+ PROV2099: "Strait of Vinâqar"
  PROV2100: "Mafid"
  PROV2101: "Sapari"
  PROV2102: "Patkan"
