--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -4653,7 +4653,7 @@
  PROV4652: "Hararda" #precipice
  PROV4653: "Daremod" #grass
  PROV4654: "Dabaig" #windland
- PROV4655: "4655"
+ PROV4655: "Tenfun"
  PROV4656: "4656"
  PROV4657: "4657"
  PROV4658: "4658"
