--- a/localisation/TD_01_flavour_samadia_l_english.yml
+++ b/localisation/TD_01_flavour_samadia_l_english.yml
@@ -46,19 +46,19 @@
  samadian_group_ideas_bonus: "Samadian Minor Ambition"
  samadian_group_ideas_start: "Samadian Minor Tradition"
  samadia_restore_cotton_trade: "Restore Cotton Trade"
- samadia_restore_cotton_trade_desc: "Diminishing power of our protector in the north and the capture of Paredeshian farmlands led to increased demand for local cotton production, which will greatly benefit us."
+ samadia_restore_cotton_trade_desc: "The sudden and chaotic invasion of the Paredeshian farmlands by the anavatic hordes caused the local cotton and grain production to greatly diminish. This proved to be an opportunity for our lords, which quickly expanded their production, increasing the area of plantations and farmlands."
  samadia_kharken_infantry: "Kharken Infantry"
- samadia_kharken_infantry_desc: "This formation started as a copy of the infantry used to combat the steppe nomads in the north, but was adapted in order to have more offensive capabilities with use of a musket."
+ samadia_kharken_infantry_desc: "While this formation started as a copy of the levies used to combat the steppe nomads in the Rakkha Empire, it was later improved upon by our engineers in order to have more offensive capabilities thanks to the use of a musket."
  samadia_land_of_temples: "Land of Temples"
- samadia_land_of_temples_desc: "Some temples in Samadia are older than many dynasties, cities and states. They serve not only spiritual function, but are often centers of the community and seats of local power."
+ samadia_land_of_temples_desc: "Some temples in Samadia are older than many dynasties, cities and states, remembering time before time, when Gods reigned the land themselves. Many of them have related legends of their founding. Currently they serve not only spiritual function, but are also often centers of the community and seats of local power."
  samadia_welcome_the_mysentrians: "Welcome to Mysentrians"
- samadia_welcome_the_mysentrians_desc: "Mysentrian merchants gladly buy our products even at increased prices, which greatly benefits not only our merchants, but also the production sector - farmers, weavers, glassmakers and plantation owners."
+ samadia_welcome_the_mysentrians_desc: "Mysentrian merchants gladly buy our products even at exorbant prices, which greatly benefits not only our merchants, but also the production sector - farmers, weavers, glassmakers and plantation owners."
  samadia_sahiranika: "Sahiranika"
- samadia_sahiranika_desc: "Increased wealth and rising demand for processed produce, many of the rural folk started emigrating to cities where they hope to find even more success."
+ samadia_sahiranika_desc: "Thanks to the growth of wealth and rising demand for processed produce, many of the rural folk started to emigrate to local urban centers, where they hope to find even more success as craftsmen."
  samadia_reformed_vibagha_system: "Reformed Vibagha System"
- samadia_reformed_vibagha_system_desc: "Ancient system of greatly dividing the land between trusted dynasties worked for a long time, but many now embrace a more systematic control over their domain."
+ samadia_reformed_vibagha_system_desc: "The ancient Vibagha system of greatly dividing the land between trusted dynasties was slowly developing over the course of the ages, evolving and changing with each passing era. With the new age of industrialisation and innovation, we have to adapt to the changing economic and political landscape once again."
  samadia_thousand_river_dances: "Thousand River Dances"
- samadia_thousand_river_dances_desc: "A strong sense of local cultural identity led to every town and village having their own local dance which is used to preserve folk tales and traditions."
+ samadia_thousand_river_dances_desc: "A strong sense of local cultural identity led to every town and village having their own local dance which is used to preserve folk tales and traditions, often accompanied by a song."
 
  paraderavi_ideas: "Paraderavian Ideas"
  paraderavi_ideas_bonus: "Paraderavian Ambition"
