--- a/localisation/TD_02_decision_nations_l_english.yml
+++ b/localisation/TD_02_decision_nations_l_english.yml
@@ -166,3 +166,5 @@
 
  ostemeria_nation_title: "Unite Ostemer Merchants @OST"
  ostemeria_nation_desc: "While the Ostemers are loosely organized into multiple guilds which often discuss important matters in the merchants' assembly, we still lack a unified national structure. If we finally politicaly unite, we will finally rule the Ostsee on our own."
+ kwaang_nation_title: "Restore Kwaang Dynasty @KWN"
+ kwaang_nation_desc: ""
