--- a/localisation/TD_01_Flavour_Hengtua_l_english.yml
+++ b/localisation/TD_01_Flavour_Hengtua_l_english.yml
@@ -72,7 +72,7 @@
  patron_taiuan_spirits: "Luetan Spirits" 
  patron_taiuan_spirits_desc: "In the depths of the Luetan, there are a myriad of spirits present who all value the importance of keeping nature preserved, disliking the ruination of life. They are thought to be part of the roots of all trees in Tsutan, protecting them from disease, with prayers to them often being ones asking for healing." 
  patron_shaantin_spirit: "Wong Huung-Tseuk" #King Peacock 
- patron_shaantin_spirit_desc: "The protector of Shaantin Island, Wong Huung-Tseuk is represented as a colourful peacock, patron of beauty and prosperity. While bestowing the residents of his island with prosperity, he expects it to be kept beautiful with many shrines and temples built to enhance the natural beauty of the island." 
+ patron_shaantin_spirit_desc: "The protector of Pinshau Island, Wong Huung-Tseuk is represented as a colourful peacock, patron of beauty and prosperity. While bestowing the residents of his island with prosperity, he expects it to be kept beautiful with many shrines and temples built to enhance the natural beauty of the island." 
  patron_dencheng_spirit: "Nanyu-Wang" #Catfish King 
  patron_dencheng_spirit_desc: "Nanyu-Wang is understood to be the spirit of wealth and authority, the one who controls the flow of riches to a kingdom and one who aids kings in rulership. He values strong leaders and asks for gold and silver to be offered upon his shrines to grant blessings." 
  patron_kwaazim_spirit: "Kings of Kwaashan" 
@@ -294,7 +294,7 @@
  bulghaen_daisalam_colonization: "Daisalam Colonization"
  bulghaen_daisalam_colonization_desc: "To many, the coasts dominated by steep cliffs on eastern Moongma were seen as uninhabitable, due to the difficulty of traversal and no attempt of mapping. This changed with the Heisean Empire, as an attempt was started in 102 AI to establish a colony on the island chain south of the mainland. With a great knowledge of cartography from a land with similar geography, eastern Moongma was charted and soon populated with the people now known as the Daisalam."
  bulghaen_huangche_syncretism: "Huangche Syncretism"
- bulghaen_huangche_syncretism_desc: " The spirits worshipped by the Huangche and Huungtseuk people have also been accepted by the Daisalam, giving respect to the land they now live in. Local shrines were maintained and beliefs were adopted as the old cults still survived, leaving strained relations between the natives and colonists stable. The most notable spirit to the worshipped is the guarding spirit of Shaantin island which is often depicted as a majestic peacock, later adopted by Bulghaen as the national symbol."
+ bulghaen_huangche_syncretism_desc: " The spirits worshipped by the Huangche and Huungtseuk people have also been accepted by the Daisalam, giving respect to the land they now live in. Local shrines were maintained and beliefs were adopted as the old cults still survived, leaving strained relations between the natives and colonists stable. The most notable spirit to the worshipped is the guarding spirit of Pinshau island which is often depicted as a majestic peacock, later adopted by Bulghaen as the national symbol."
  bulghaen_northern_xifang_sects: "Northern Xifang Sects"
  bulghaen_northern_xifang_sects_desc: "Bulghaen has long respected many local faiths on our lands and with the growth of the Xifang sects as migrants arrived. Since the Xifang still respect the local folklore of our lands, there have not been many conflicts between the differing faiths, allowing for discourse and philosophy to flourish especially in the urban centers of the nation. Arriving from mainland Heisean, Lam and Xun, they now seek to spread their faith to all."
 
@@ -384,3 +384,24 @@
  huangche_huangche_copper_desc: "Copper found in Lamhoi and Moongman highlands has proved to be a great asset in expanding the army. Thanks to the efforts of the brightest engineers of Hengtua, our guns are not only the most destructive, but their relative cheapness allows us to field countless guns on the battlefield."
  huangche_unite_the_tsinhoi: "Unite the Tsinhoi"
  huangche_unite_the_tsinhoi_desc: "Tsinhoi has been ruled by corrupted warlords, causing widespread chaos and disarray, being interested only in their own personal gains. We have to show them than the true prosperity comes not from liberty, but from order. If they don't want to embrace the true way, we will have to show it to them ourselves."
+
+ kilaan_pirates_reform: "Ki'Laan Pirates"
+ kilaan_pirates_reform_desc: "Many pirates of our coast take part in this high risk lifestyle due to the poor living conditions and not many opportunities to properly acquire wealth. If we formalize some of their activities, this will greatly benefit us and we will be able to direct their attacks."
+
+ shaantin_ideas: "Shaantin Ideas"
+ shaantin_ideas_bonus: "Shaantin Ambition"
+ shaantin_ideas_start: "Shaantin Traditions"
+ shaantin_shaantin_temples: "Temples of Shaantin"
+ shaantin_shaantin_temples_desc: "Thanks to the popularity of Shaantin as a destination of many pilgrimages from across the Hengtuan world, countless temples and shrines have been built along the trail leading to the peak. Wealth brought with these pilgrims fills not only our treasury, but also helps keeping the temples intact."
+ shaantin_pirate_haven_of_ki_laan: "Ki'Laan Pirate Haven"
+ shaantin_pirate_haven_of_ki_laan_desc: "To many merchants, the pirates operating from the coastal town of Ki'Laan are an everlasting menace, raiding anyone that even comes close to their area of operation. Thankfully, many of those freebooters are willing to work in the service of the Zhuquan, often avoiding attackin the pilgrims and domestic merchants."
+ shaantin_crossroad_of_peoples: "Crossroad of Peoples"
+ shaantin_crossroad_of_peoples_desc: "Most of the travellers reaching Shaantin come from very distant lands. People of Tsutan, Khemdan, Okukaiga, Heisean and Aiunusu come here to witness the glory of the holy mountain and the exorbant luxuries founded around it. This made our people much more open to foreigners, taking a very calculated approach to diplomacy."
+ shaantin_peacock_army: "Peacock Army"
+ shaantin_peacock_army_desc: "Bulghaenian seizure of our northern coast quickly brought with it a need to militarize the society and prepare it for the coming storm. Sons of many lords were taught military strategy and tactics in order to repell the invaders. The new army was often called the Peacock army, taking the name after the great Wong Huung-Tseuk."
+ shaantin_taantsau: "Taantsau"
+ shaantin_taantsau_desc: "The heavenly wine often served in many hotsprings and temples across the Shaantin area is famous for its miraculous healing abilities, sweet taste and practically no negative effects associated with overconsumption. Taantsau's unique traits make it incredibly valuable to many merchants across Tsinhoi."
+ shaantin_huangche_influences: "Huangche Influences"
+ shaantin_huangche_influences_desc: "Aggresiveness of our Heisen rivals and the growing influence of the souther pirates made many of our people wishing to establish proper order in the countryside, strengthening the administration and founding a proper army. These tendencies made the court much more likely to maintain better relations with the Huangche countries."
+ shaantin_new_shenting_school: "New Shenting School"
+ shaantin_new_shenting_school_desc: "The traditional Shenting school believes that the ruler's power is inherently divine and only person chosen by the heavens will be a good ruler. The issue with that approach is that absolves the ruler of responsibility and accountability, encouraging them to focus solely on the sacral matters. The new approach, inspired by the Taamtau school, promotes an orderly system and heavily organized system, coming from the belief that in order to achieve the divine, we must maintain order at all cost."
