--- a/localisation/TD_areas_l_english.yml
+++ b/localisation/TD_areas_l_english.yml
@@ -670,8 +670,8 @@
  east_daimin_area: "East Daimin"
  lamhoi_area: "Lamhoi"
  north_moongma_area: "North Moongma"
- west_shaantin_area: "West Shaantin"
- east_shaantin_area: "East Shaantin"
+ west_pinshau_area: "Western Pinshau"
+ east_pinshau_area: "Eastern Pinshau"
  henling_coast_area: "Henling Coast"
  yuakwaak_area: "Yuakwaak"
  gui_area: "Gui"
