ehrenia and bogiland map changes

--- a/localisation/prov_names_adj_l_english.yml
+++ b/localisation/prov_names_adj_l_english.yml
@@ -680,8 +680,8 @@
  PROV_ADJ679: "Tenstedt"
  PROV_ADJ680: "Barnstorf"
  PROV_ADJ681: "Drentwede"
- PROV_ADJ682: "North Ostrowa"
- PROV_ADJ683: "South Ostrowa"
+ PROV_ADJ682: "Ostrowa"
+ PROV_ADJ683: "683"
  PROV_ADJ684: "Rehden"
  PROV_ADJ685: "Gersten"
  PROV_ADJ686: "Nortrup"
