--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -680,8 +680,8 @@
  PROV679: "Tenstedt"
  PROV680: "Barnstorf"
  PROV681: "Drentwede"
- PROV682: "North Ostrowa"
- PROV683: "South Ostrowa"
+ PROV682: "Ostrova"
+ PROV683: "683"
  PROV684: "Rehden"
  PROV685: "Gersten"
  PROV686: "Nortrup"
