--- a/localisation/TD_cultures_l_english.yml
+++ b/localisation/TD_cultures_l_english.yml
@@ -146,7 +146,8 @@
  aroshas: "Aroshas"
  saenayan: "Saenayan"
  dashavi: "Dashavi"
- haptoiring: "Haptoiring"
+ mardezard: "Mardezard"
+ haptoiring: "Haptoiring" #?
 
  zakarturi_group: "Zakarturi"
  mesiheisi: "Mesiheisi"
