palmisianism initial setup
(using it crashes)

--- a/localisation/TD_religion_l_english.yml
+++ b/localisation/TD_religion_l_english.yml
@@ -60,6 +60,9 @@
  wirosepan_rebels_demand: "Convert $COUNTRYNAME$"
  gelynians: "Gelynians"
 
+ palmisianism: "Palmisianism"
+ palmisianism_religion_desc: "tldr"
+ chapterists: "Chapterists"
 
 
 
