--- a/localisation/TD_01_flavour_visparaya_l_english.yml
+++ b/localisation/TD_01_flavour_visparaya_l_english.yml
@@ -201,3 +201,21 @@
  visparaya_mend_the_divides_desc: "REPLACE_ME"
  visparaya_everlasting_empire: "Everlasting Empire"
  visparaya_everlasting_empire_desc: "REPLACE_ME"
+
+ zeristan_ideas: "Zeristani Ideas"
+ zeristan_ideas_bonus: "Zeristani Ambitions"
+ zeristan_ideas_start: "Zeristani Traditions"
+ zeristan_nomads_of_tarascan: "Nomads of Tarascan"
+ zeristan_nomads_of_tarascan_desc: "Unhabitable deserts of the Tarascan isle have caused large portion of the population to embrace nomadic and semi-nomadic lifestyle, moving seasonally between the coast and the interior. Their expertise in mounted travel and fighting often proved to be helpful during the times of Visparayan invasions."
+ zeristan_maqitan_trade: "Maqitan Trade"
+ zeristan_maqitan_trade_desc: "Our position in the southern Visparaya and our ties with the southern oligarchs allows us to cheaply move goods across the Maqitan. Without our seamen risking their lives on the sea avoiding the pirates, most of Visparaya and Hestan would be left without the Kahetian luxuries."
+ zeristan_zergasahr_culture: "Zergašahri Culture"
+ zeristan_zergasahr_culture_desc: "Compared to other Visparayan states, we managed to stay relatively independent, even keeping some of our autonomy in the wake of the growing Yatunian Empire. Many of our nobles take pride in our political and cultural independence, not destroyed by the rotten courts of the north."
+ zeristan_allies_in_the_south: "Kahetan Allies"
+ zeristan_allies_in_the_south_desc: "Our friendly ties with the Diarenan merchant communities brought us not only fortune, but also trusted allies. Willing to protect their interest at all cost, they were often of great importance while dealing with conflicts against the Maqitan pirates."
+ zeristan_southern_court: "Southern Court"
+ zeristan_southern_court_desc: "The court of the Zeristani Aevadata was always located around the city of Zergašahr, with many palaces scattered around the cities. The so called 'southern court' was always in opposition to the imperial Visparayan court. The currently active court was built in the thirteenth century, taking heavy inspiration from Kahetian and Samadian art and influences the regional art styles to this day."
+ zeristan_the_yellow_banner: "The Yellow Banner"
+ zeristan_the_yellow_banner_desc: "The legendary yellow banner of Zeristan is often associated with Azdebar, who, according to many tales, was once an important lord in the Visparayan court. Due to internal intrigues beyond his control he was exiled to pacify the Tarascan nomads, but instead he took the opportunity and allied with the local nomads and led them to rebel against Visparaya under the ancient yellow banner of his family."
+ zeristan_a_new_visparaya: "A New Visparaya"
+ zeristan_a_new_visparaya_desc: "The north will fall as the yellow banner will rise on the ruins of the ancient Visparaya. Centuries of oppression of Mardezard people and countless attempts to secure the profitable trade routes have given our people a will to fight with ambitions to finally show them what we are capable of."
