ehren new provinces

--- a/localisation/TD_areas_l_english.yml
+++ b/localisation/TD_areas_l_english.yml
@@ -250,12 +250,13 @@
  anginneowu_area: "Anginneowu"
  aideich_area: "Aideich"
 
- ehrenia_proper_area: "Ehrenia Proper"
+ wirfilde_area: "Wirfilde"
  himmel_kanal_area: "Himmelkanal"
  noordenia_area: "Noordenia"
  nordstrasse_area: "Nordstrasse"
  heniholm_area: "Heniholm"
  rudohland_area: "Rudohland"
+ luftnebul_area: "Luftnebul"
 
  xastram_area: "Xastram"
  disayat_area: "Disayat"
