--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -681,7 +681,7 @@
  PROV680: "Barnstorf"
  PROV681: "Drentwede"
  PROV682: "Ostrova"
- PROV683: "683"
+ PROV683: "Blisila"
  PROV684: "Rehden"
  PROV685: "Gersten"
  PROV686: "Nortrup"
@@ -4655,10 +4655,10 @@
  PROV4654: "Dabaig" #windland
  PROV4655: "Tenfun"
  PROV4656: "4656"
- PROV4657: "4657"
- PROV4658: "4658"
- PROV4659: "4659"
- PROV4660: "4660"
+ PROV4657: "Alpfuzi"
+ PROV4658: "Ruowasee"
+ PROV4659: "Felisforst"
+ PROV4660: "Salzwih"
  PROV4661: "4661"
  PROV4662: "4662"
  PROV4663: "4663"
