--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -4654,7 +4654,7 @@
  PROV4653: "Daremod" #grass
  PROV4654: "Dabaig" #windland
  PROV4655: "Tenfun"
- PROV4656: "4656"
+ PROV4656: "Waterweiden"
  PROV4657: "Alpfuzi"
  PROV4658: "Ruowasee"
  PROV4659: "Felisforst"
