--- a/localisation/TD_religion_l_english.yml
+++ b/localisation/TD_religion_l_english.yml
@@ -60,7 +60,7 @@
  wirosepan_rebels_demand: "Convert $COUNTRYNAME$"
  gelynians: "Gelynians"
 
- palmisianism: "Palmisianism"
+ palmisianism: "Palmisianist"
  palmisianism_religion_desc: "tldr"
  chapterists: "Chapterists"
 
