tooltip + broken remove_church_aspect

--- a/localisation/TD_01_flavour_palmisianism_l_english.yml
+++ b/localisation/TD_01_flavour_palmisianism_l_english.yml
@@ -35,3 +35,5 @@
 
 
  palmisian_one_of_many: "One of Many"
+ convert_on_missionary_number_tooltip: "We will convert number of provinces based on our number of missionaries"
+ palmisian_neighbor_tooltip: "We will gain 25 opinion with our every neighbor"
