--- a/localisation/TD_01_flavour_palmisianism_l_english.yml
+++ b/localisation/TD_01_flavour_palmisianism_l_english.yml
@@ -32,6 +32,7 @@
  PALMISIANISM_HAS_ADM_ASPECT: "Has any £adm£ §YAspect§! active."
  PALMISIANISM_HAS_DIP_ASPECT: "Has any £dip£ §YAspect§! active."
  PALMISIANISM_HAS_MIL_ASPECT: "Has any £mil£ §YAspect§! active."
+ palmisian_festival_cooldown_tt: "Recent festival was 10 years ago"
 
 
  palmisian_one_of_many: "One of Many"
