--- a/localisation/TD_01_flavour_palmisianism_l_english.yml
+++ b/localisation/TD_01_flavour_palmisianism_l_english.yml
@@ -1,9 +1,13 @@
 ﻿l_english:
+ aspect_bonus_effect_tt: "This may have a §Ybonus effect§!."
+ icon_aspect_salist_tt: "This teaching is shared by §YSalists§!. Having at least 2 salist teachings will blablabla"
+ icon_aspect_chapterist_tt: "This teaching is shared by §YChapterists§!. Having at least 2 chapterist teachings will blablabla"
+ 
  palmisianism_sun_solstice_festival_sal_aspect: "Sun Solstice Festival"
  desc_palmisianism_sun_solstice_festival_sal_aspect: "tldr"
  palmisianism_rightful_war_chapter_aspect: "Rightful War"
  desc_palmisianism_rightful_war_chapter_aspect: "tldr"
- palmisianism_faithful_gratification_sal_aspect: "Faithful Grafitication"
+ palmisianism_faithful_gratification_sal_aspect: "Faithful Gratification"
  desc_palmisianism_faithful_gratification_sal_aspect: "tldr"
  palmisianism_battle_monks_chapter_aspect: "Battle Monks"
  desc_palmisianism_battle_monks_chapter_aspect: "tldr"
