Wicha prov names

--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -1859,8 +1859,8 @@
  PROV1858: "Gwinen"
  PROV1859: "Kodmena"
  PROV1860: "Pineraykaan"
- PROV1861: "1861"
- PROV1862: "1862"
+ PROV1861: "Kisukeawa"
+ PROV1862: "Iririsv"
  PROV1863: "Moshika"
  PROV1864: "Denbane"
  PROV1865: "Takeshun"
@@ -1869,7 +1869,7 @@
  PROV1868: "Shkotenak"
  PROV1869: "Bahoraykaan"
  PROV1870: "Myawraykaan"
- PROV1871: "1871"
+ PROV1871: "Useupha"
  PROV1872: "Southern Bien Giura"
  PROV1873: "Wajikogun"
  PROV1874: "Husehe"
@@ -1878,11 +1878,11 @@
  PROV1877: "Alikaske"
  PROV1878: "Jarithan Coast"
  PROV1879: "Northwestern Fimaqan Sea"
- PROV1880: "1880"
+ PROV1880: "Ihtarisv"
  PROV1881: "Northern Famiqan Sea"
- PROV1882: "1882"
+ PROV1882: "Tkuseati"
  PROV1883: "Southeastern Ilonardian Sea"
- PROV1884: "1884"
+ PROV1884: "Wahpetewiho"
  PROV1885: "Eastern Ilonardian Sea"
  PROV1886: "Agohada"
  PROV1887: "Hokitan"
@@ -2676,7 +2676,7 @@
  PROV2675: "2675"
  PROV2676: "2676"
  PROV2677: "2677"
- PROV2678: "2678"
+ PROV2678: "Maxpuari"
  PROV2679: "2679"
  PROV2680: "Posalan Coast"
  PROV2681: "Central Tsinhoi Gulf"
@@ -2815,7 +2815,7 @@
  PROV2814: "2814"
  PROV2815: "2815"
  PROV2816: "2816"
- PROV2817: "2817"
+ PROV2817: "Atahexura"
  PROV2818: "2818"
  PROV2819: "2819"
  PROV2820: "2820"
@@ -2875,36 +2875,36 @@
  PROV2874: "Gaipaa"
  PROV2875: "Gaiokaipin"
  PROV2876: "2876"
- PROV2877: "2877"
+ PROV2877: "Xakesika"
  PROV2878: "Tukveha"
- PROV2879: "2879"
- PROV2880: "2880"
- PROV2881: "2881"
- PROV2882: "2882"
+ PROV2879: "Hpawahu"
+ PROV2880: "Paheahpe"
+ PROV2881: "Ihtawihte"
+ PROV2882: "Yesehe"
  PROV2883: "2883"
- PROV2884: "2884"
- PROV2885: "2885"
- PROV2886: "2886"
- PROV2887: "2887"
- PROV2888: "2888"
- PROV2889: "2889"
- PROV2890: "2890"
- PROV2891: "2891"
- PROV2892: "2892"
- PROV2893: "2893"
- PROV2894: "2894"
- PROV2895: "2895"
- PROV2896: "2896"
+ PROV2884: "Ihakari"
+ PROV2885: "Xotehe"
+ PROV2886: "Arasahe"
+ PROV2887: "Sirihehe"
+ PROV2888: "Htopekyaska"
+ PROV2889: "Hukaute"
+ PROV2890: "Susekpa"
+ PROV2891: "Rahewatho"
+ PROV2892: "Xixoka"
+ PROV2893: "Srawaxe"
+ PROV2894: "Waraxiahtox"
+ PROV2895: "Kisukexya"
+ PROV2896: "Pusehkaxi"
  PROV2897: "Segutusipe"
  PROV2898: "Waingekuna"
- PROV2899: "2899"
+ PROV2899: "Kipewasuke"
  PROV2900: "Sohukumbe"
  PROV2901: "2901"
  PROV2902: "Gwiipkuna"
  PROV2903: "Biaidembi"
  PROV2904: "Gizhapiapa"
  PROV2905: "Oketa"
- PROV2906: "2906"
+ PROV2906: "Ihtawaire"
  PROV2907: "Apunland"
  PROV2908: "Tagiuk"
  PROV2909: "Kagruk"
