Tarhian prov names
Apasemaa is Ojibwe, Wajiwaka and Minisa are Cree

--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -1790,58 +1790,58 @@
  PROV1789: "Mayagzad"
  PROV1790: "Saramaran"
  PROV1791: "Aqamagew"
- PROV1792: "1792"
+ PROV1792: "Bagamine"
  PROV1793: "Wiigawas"
- PROV1794: "1794"
- PROV1795: "1795"
- PROV1796: "1796"
- PROV1797: "1797"
+ PROV1794: "Akwaakwaa"
+ PROV1795: "Waazh"
+ PROV1796: "Odamino"
+ PROV1797: "Gimiwan"
  PROV1798: "Valvu Estuary"
  PROV1799: "Biyaharan Coast"
  PROV1800: "Saryanan Bay"
  PROV1801: "Malailumi Coast"
- PROV1802: "1802"
- PROV1803: "1803"
- PROV1804: "1804"
+ PROV1802: "Adaawewigamig"
+ PROV1803: "Jiigashkosiw"
+ PROV1804: "Wasaagitigaan"
  PROV1805: "Rafutal"
  PROV1806: "Animastig"
- PROV1807: "1807"
- PROV1808: "1808"
- PROV1809: "1809"
+ PROV1807: "Ministikmaskotew"
+ PROV1808: "Atawewikamik"
+ PROV1809: "Ministiksakaw"
  PROV1810: "Kapishe"
  PROV1811: "Kagenok"
  PROV1812: "Maskazhi"
  PROV1813: "Giziziib"
- PROV1814: "1814"
+ PROV1814: "Asigobaan"
  PROV1815: "Niltalami Gulf"
  PROV1816: "Dakhani Tip"
- PROV1817: "1817"
- PROV1818: "1818"
+ PROV1817: "Goshibaabaa"
+ PROV1818: "Agaamashkosiw"
  PROV1819: "Southern Dakal Sea"
- PROV1820: "1820"
- PROV1821: "1821"
- PROV1822: "1822"
- PROV1823: "1823"
- PROV1824: "1824"
+ PROV1820: "Aninaatig"
+ PROV1821: "Kayasimikiwam"
+ PROV1822: "Sakawotenaw"
+ PROV1823: "Kipitonewin"
+ PROV1824: "Naawashkosiw"
  PROV1825: "Visidanba Lake"
- PROV1826: "1826"
- PROV1827: "1827"
- PROV1828: "1828"
- PROV1829: "1829"
- PROV1830: "1830"
- PROV1831: "1831"
- PROV1832: "1832"
+ PROV1826: "Ozhiookwe"
+ PROV1827: "Asiniwaciy"
+ PROV1828: "Kayasiaskiy"
+ PROV1829: "Mistahkesiw"
+ PROV1830: "Wiyasmiciw"
+ PROV1831: "Osawawcistahikan"
+ PROV1832: "Askihtakosawesk"
  PROV1833: "Dibwaazh"
  PROV1834: "Waagisho"
- PROV1835: "1835"
- PROV1836: "1836"
+ PROV1835: "Bimiwanaan"
+ PROV1836: "Wanendamaa"
  PROV1837: "Zaagkwa"
  PROV1838: "Akwasana"
  PROV1839: "Giishabikwa"
  PROV1840: "Giyjibawada"
  PROV1841: "Nabagan"
- PROV1842: "1842"
- PROV1843: "1843"
+ PROV1842: "Zhaawanigabikan"
+ PROV1843: "Giwediingabikan"
  PROV1844: "Zhaamashka"
  PROV1845: "Tarhianahcoill"
  PROV1846: "Tarhianahcoill"
@@ -1888,7 +1888,7 @@
  PROV1887: "Hokitan"
  PROV1888: "Niseyaki"
  PROV1889: "Tactawick"
- PROV1890: "1890"
+ PROV1890: "Yipetinaw"
  PROV1891: "Nufekha"
  PROV1892: "Kapusiut"
  PROV1893: "Igimak"
@@ -1912,36 +1912,36 @@
  PROV1911: "Tikkuaktuk"
  PROV1912: "Forstland"
  PROV1913: "Uuyurat"
- PROV1914: "1914"
+ PROV1914: "Asiniwaciy"
  PROV1915: "Kanniggiks"
  PROV1916: "Minisians"
  PROV1917: "Minisians"
  PROV1918: "Minisians"
- PROV1919: "1919"
- PROV1920: "1920"
+ PROV1919: "Kiskapiskaw"
+ PROV1920: "Asiniskawi"
  PROV1921: "Bayesh"
- PROV1922: "1922"
+ PROV1922: "Otenaw"
  PROV1923: "West Fimaqan Sea"
- PROV1924: "1924"
- PROV1925: "1925"
+ PROV1924: "Natakam"
+ PROV1925: "Wasakam"
  PROV1926: "Methiwe"
  PROV1927: "Woodschabouth"
  PROV1928: "Odusweekcha"
  PROV1929: "Moideshweshe"
  PROV1930: "Zadrotun"
- PROV1931: "1931"
+ PROV1931: "Apihcicikipek"
  PROV1932: "Central Fimaqan Current"
- PROV1933: "1933"
+ PROV1933: "Misiispatinaw"
  PROV1934: "Ashmubadoo"
- PROV1935: "1935"
- PROV1936: "1936"
- PROV1937: "1937"
- PROV1938: "1938"
- PROV1939: "1939"
- PROV1940: "1940"
- PROV1941: "1941"
+ PROV1935: "Cikisakaw"
+ PROV1936: "Misiaskiy"
+ PROV1937: "Cikiotenaw"
+ PROV1938: "Misisakaw"
+ PROV1939: "Ispatinaw"
+ PROV1940: "Iskotewan"
+ PROV1941: "Ciwewaskiy"
  PROV1942: "Southern Fimaqan Sea"
- PROV1943: "1943"
+ PROV1943: "Kisiwasiw"
  PROV1944: "Tedebukoshawa"
  PROV1945: "Washewakche"
  PROV1946: "Chepashick"
@@ -2211,16 +2211,16 @@
  PROV2210: "Bavgania" #bear forest
  PROV2211: "Dakhalbum"
  PROV2212: "Lake Harold"
- PROV2213: "2213"
- PROV2214: "2214"
+ PROV2213: "Lake Mitena"
+ PROV2214: "Zhaawanigaama"
  PROV2215: "Dosibur"
  PROV2216: "Daštarog"
  PROV2217: "Aroxtar"
  PROV2218: "Hamzasan"
  PROV2219: "Randigur"
- PROV2220: "2220"
+ PROV2220: "Giwediingaama"
  PROV2221: "Bešazarg"
- PROV2222: "2222"
+ PROV2222: "Gichigami"
  PROV2223: "Anaaklik Lake"
  PROV2224: "Drayabaz"
  PROV2225: "Samadigar"
@@ -2571,11 +2571,11 @@
  PROV2570: "Ittuk"
  PROV2571: "Kigunnik"
  PROV2572: "Minitkaa"
- PROV2573: "2573"
+ PROV2573: "Dewizizagaan"
  PROV2574: "Nalauttuk"
  PROV2575: "Okomati Gulf"
  PROV2576: "Pasiaktuk"
- PROV2577: "2577"
+ PROV2577: "Webinigan"
  PROV2578: "Ivaktuk"
  PROV2579: "Kiirak"
  PROV2580: "Haenam Gulf"
