--- a/localisation/TD_cultures_l_english.yml
+++ b/localisation/TD_cultures_l_english.yml
@@ -588,3 +588,16 @@
 
  cokar_group: "Cokar"
  kocgat: "Kocgat"
+
+ kerdexian_group: "Kerdexian"
+ Naitheka: "Naitheka"
+ chokake: "Chokake"
+ tichu: "Tichu"
+
+ makori_group: "Makori"
+ nakor: "Nakor"
+ magee: "Magee"
+
+ atekek_group: "Atekek"
+ cagice: "Cagice"
+ paklu: "Paklu"
