--- a/localisation/TD_religion_l_english.yml
+++ b/localisation/TD_religion_l_english.yml
@@ -253,13 +253,13 @@
  chantlian_pantheon_rebels_demand: "Convert $COUNTRYNAME$"
 
  
- itulan: "Itulan"
- itulan_religion_desc: "People of the eastern Wasichantlian coast have an ancient tradition of preserving spirits through art and crafts, often valueing them over their own lives."
- itulan_rebels_demand_desc: "The religious rebels fight for the $RELIGION$ religion. They demand that we recognize its supremacy or at the very least cease our efforts to convert them and let them worship in peace."
- itulan_rebels_title: "Religious"
- itulan_rebels_desc: "Religious fanatics tend to rise up in provinces controlled by nations of a different faith. They seek to spread their faith and smite all unbelievers."
- itulan_rebels_army: "$RELIGION$ Army"
- itulan_rebels_demand: "Convert $COUNTRYNAME$"
+ ituli: "Ituli"
+ ituli_religion_desc: "People of the eastern Wasichantlian coast have an ancient tradition of preserving spirits through art and crafts, often valueing them over their own lives."
+ ituli_rebels_demand_desc: "The religious rebels fight for the $RELIGION$ religion. They demand that we recognize its supremacy or at the very least cease our efforts to convert them and let them worship in peace."
+ ituli_rebels_title: "Religious"
+ ituli_rebels_desc: "Religious fanatics tend to rise up in provinces controlled by nations of a different faith. They seek to spread their faith and smite all unbelievers."
+ ituli_rebels_army: "$RELIGION$ Army"
+ ituli_rebels_demand: "Convert $COUNTRYNAME$"
  
  kachihe: "Kachihe"
  kachihe_religion_desc: "Faith native to the Qarabil archipelago mostly focused on the worship of the moon and the stars."
@@ -284,6 +284,14 @@
  kerdexian_rebels_desc: "Religious fanatics tend to rise up in provinces controlled by nations of a different faith. They seek to spread their faith and smite all unbelievers."
  kerdexian_rebels_army: "$RELIGION$ Army"
  kerdexian_rebels_demand: "Convert $COUNTRYNAME$"
+
+ melimapa: "Melimapa"
+ melimapa_religion_desc: "The faith of Melimapa is founded on the fact that there are four paralell planes of existence. This vision of the world (or worlds) is widely popular across the eastern Venatia."
+ melimapa_rebels_demand_desc: "The religious rebels fight for the $RELIGION$ religion. They demand that we recognize its supremacy or at the very least cease our efforts to convert them and let them worship in peace."
+ melimapa_rebels_title: "Religious"
+ melimapa_rebels_desc: "Religious fanatics tend to rise up in provinces controlled by nations of a different faith. They seek to spread their faith and smite all unbelievers."
+ melimapa_rebels_army: "$RELIGION$ Army"
+ melimapa_rebels_demand: "Convert $COUNTRYNAME$"
 
  wasichantlian: "Chantlian"
 
