--- a/localisation/TD_tradenodes_l_english.yml
+++ b/localisation/TD_tradenodes_l_english.yml
@@ -8,7 +8,7 @@
  nifthem_tradenode: "Vetikerk"
  ehrenia_tradenode: "Ehren Straits"
  indrigerland_tradenode: "Indrigerland"
- tummland_tradenode: "Pihlajakivi"
+ tummland_tradenode: "Aapotorni"
  uzkolia_tradenode: "Uzkolia"
  syvametsa_tradenode: "Syvämetsä"
  chilverchia_tradenode: "Retonoe"
