--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -4796,13 +4796,13 @@
  PROV4795: "4795"
  PROV4796: "4796"
  PROV4797: "4797"
- PROV4798: "4798"
- PROV4799: "4799"
- PROV4800: "4800"
- PROV4801: "4801"
- PROV4802: "4802"
- PROV4803: "4803"
- PROV4804: "4804"
+ PROV4798: "Kissapoikajärvi"
+ PROV4799: ""
+ PROV4800: ""
+ PROV4801: ""
+ PROV4802: ""
+ PROV4803: "Olutlampi"
+ PROV4804: ""
  PROV4805: "4805"
  PROV4806: "4806"
  PROV4807: "4807"
