--- a/localisation/TD_cultures_l_english.yml
+++ b/localisation/TD_cultures_l_english.yml
@@ -601,3 +601,14 @@
  atekek_group: "Atekek"
  cagice: "Cagice"
  paklu: "Paklu"
+
+ ce_group: "Ce"
+ lafken: "Lafken"
+ kacukulen: "Kacukulen"
+
+ askesta_group: "Askesta"
+ asketan: "Asketan"
+
+ secesan_group: "Secesan"
+ hoyre: "Hoyre"
+ skalsoni: "Skalsoni"
